<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/register_title_sub_title"
        android:layout_width="172dp"
        android:layout_height="28dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="208dp"
        android:background="#FFFFFF"
        android:gravity="center"
        android:text="@string/register_page_title_sec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <TextView
        android:id="@+id/register_phone_number_textView"
        android:layout_width="79dp"
        android:layout_height="40dp"
        android:layout_marginTop="292dp"
        android:background="#250E0D0D"
        android:text="@string/register_page_user_phoneNum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register_page_birthday_textView"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginTop="212dp"
        android:background="#190C0000"
        android:text="@string/register_page_user_birthday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/register_page_surname_textView"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginTop="132dp"
        android:background="#190C0000"
        android:text="@string/register_page_user_surname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.643"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="412dp"
        android:layout_height="23dp"
        android:background="#2D57AC"
        android:text="@string/register_page_title"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/register_page_givenName_textView"
        android:layout_width="76dp"
        android:layout_height="25dp"
        android:layout_marginTop="132dp"
        android:background="#190C0000"
        android:text="@string/register_page_user_givenname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/register_information_page_editTextTextPersonName"
        android:layout_width="98dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/register_page_givenName_textView"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/register_information_page_editTextTextSurname"
        android:layout_width="98dp"
        android:layout_height="50dp"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/register_page_surname_textView"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/register_information_editTextPhone"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="292dp"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/register_phone_number_textView"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/register_information_pickedBDates_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="115dp"
        android:layout_marginTop="212dp"
        android:text="@string/register_page_birthday_pickDate_button"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.289" />

    <Button
        android:id="@+id/register_information_page_next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="464dp"
        android:layout_marginEnd="60dp"
        android:text="@string/register_page_next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/register_information_page_back_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="464dp"
        android:text="@string/register_page_back_button"

        app:layout_constraintEnd_toStartOf="@+id/register_information_page_next_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register_information_page_message_from_button_textView"
        android:layout_width="346dp"
        android:layout_height="36dp"
        android:text="@string/register_information_page_message_from_button"
        android:layout_marginTop="360dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.784" />

    <TextView
        android:id="@+id/picked_Birthday_textView"
        android:layout_width="136dp"
        android:layout_height="24dp"
        android:text="@string/register_information_page_picked_birthday"
        android:layout_marginTop="220dp"
        android:layout_marginRight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>