<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id ="@+id/scrollView"
        android:layout_width="348dp"
        android:layout_height="283dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.689">

        <LinearLayout
            android:id ="@+id/msgList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <EditText
        android:id="@+id/editTextMsg"
        android:layout_width="344dp"
        android:layout_height="48dp"
        android:layout_marginTop="236dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/chat_main_msg_from_server"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/chat_main_sendMsg_btn"
        android:layout_width="345dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:text="@string/chat_main_sendMsg_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView" />

    <Button
        android:id="@+id/chat_main_start_server"
        android:layout_width="351dp"
        android:layout_height="36dp"
        android:layout_marginTop="188dp"
        android:text="@string/chat_main_start_server_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>